plugins {
    id 'java'
    id 'com.diffplug.spotless' version "7.0.3"
}

group 'com.github.ankowals'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
    gradlePluginPortal()
}

dependencies {
    testAnnotationProcessor("org.projectlombok:lombok:1.18.38")
    testCompileOnly("org.projectlombok:lombok:1.18.38")
    testImplementation("org.junit.jupiter:junit-jupiter:5.13.1")
    testImplementation("org.junit.platform:junit-platform-launcher:1.13.1")
    testImplementation("org.junit-pioneer:junit-pioneer:2.3.0")
    testImplementation("io.github.glytching:junit-extensions:2.6.0")
    testImplementation("org.seleniumhq.selenium:selenium-java:4.33.0")
    testImplementation("io.github.bonigarcia:selenium-jupiter:6.1.1")
    testImplementation("ch.qos.logback:logback-core:1.5.18")
    testImplementation("ch.qos.logback:logback-classic:1.5.18")
    testImplementation("org.slf4j:slf4j-api:2.0.17")
    testImplementation("org.slf4j:jul-to-slf4j:2.0.17")
    testImplementation("org.apache.commons:commons-lang3:3.17.0")
    testImplementation("org.assertj:assertj-core:4.0.0-M1")
    testImplementation("org.aspectj:aspectjweaver:1.9.24")
    testImplementation("org.hamcrest:hamcrest:3.0")
    testImplementation("org.jsoup:jsoup:1.20.1")
    testImplementation("com.aventstack:extentreports:5.1.2")
    testImplementation("org.testcontainers:selenium:1.21.1")
    testImplementation("com.github.romankh3:image-comparison:4.4.0")
    testImplementation("com.deque.html.axe-core:selenium:4.10.1")
    testImplementation("commons-io:commons-io:2.19.0")
    testImplementation("org.awaitility:awaitility:4.3.0")
}

test {
    sourceCompatibility = 1.22
    targetCompatibility = 1.22

    //set env variables
    environment "WDM_DOCKERENABLERECORDING", "false"
    environment "WDM_CHROMEVERSION", "137"

    environment "BROWSER_IN_DOCKER_ENABLED", "false"
    environment "BROWSER_IN_HEADLESS_ENABLED", "false"

    //recording works in headless in container
    //when in use switch off recording via container
    environment "BROWSER_WATCHER_ENABLED", "true"

    environment "ACCESSIBILITY_ASSERTIONS_ENABLED", "true"

    //requires to run tests in container
    environment "VISUAL_ASSERTIONS_ENABLED", "false "
    environment "VISUAL_ASSERTIONS_REPLACE_SCREENSHOTS", "false"

    useJUnitPlatform()

    doFirst {
        def weaver = configurations.testRuntimeClasspath.find { it.name.contains("aspectjweaver") }
        jvmArgs += "-javaagent:$weaver"
        jvmArgs += "--add-opens=java.base/java.util=ALL-UNNAMED"
        jvmArgs += "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED"
        jvmArgs += "--add-opens=java.base/java.lang=ALL-UNNAMED"
        jvmArgs += "--add-opens=java.base/java.time=ALL-UNNAMED"
        jvmArgs += "--add-opens=java.base/java.time.format=ALL-UNNAMED"
    }
}

spotless {
    java {
        googleJavaFormat()
    }
}